Trying to fix up the parallelUpload test